--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@ Vue.component('task-status', {
   props: ['name', 'complete', 'index'],
   data: function () {
     return {
-      	success: false
+      	success: false,
+	fail: false    
     }
   },
   template: `<div class="task">
@@ -31,13 +32,13 @@ Vue.component('task-status', {
 	    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" x="0px" y="0px"
 	        viewBox="0, 0, 100, 100" id="checkmark">
 	        <g transform="">
-		        <circle class="path" :class="{'path-complete': success}" fill="none" stroke="#7DB0D5" stroke-width="8" stroke-miterlimit="10" cx="50" cy="50" r="44"/>
-	            <circle class="fill" :class="{'fill-complete': complete, 'success': success}" fill="none" stroke="#7DB0D5" stroke-width="8" stroke-miterlimit="10" cx="50" cy="50" r="44"/>
-		        <polyline class="check" :class="{'check-complete': index != 3 && complete, 'success': success}" fill="none" stroke="#7DB0D5" stroke-width="8" stroke-linecap="round" stroke-miterlimit="10" 
+		        <circle class="path" :class="{'path-complete': success, 'fail':fail}" fill="none" stroke="#7DB0D5" stroke-width="8" stroke-miterlimit="10" cx="50" cy="50" r="44"/>
+	            <circle class="fill" :class="{'fill-complete': complete, 'success': success, 'fail':fail}" fill="none" stroke="#7DB0D5" stroke-width="8" stroke-miterlimit="10" cx="50" cy="50" r="44"/>
+		        <polyline class="check" :class="{'check-complete': index != 3 && complete,'success': success}" fill="none" stroke="#7DB0D5" stroke-width="8" stroke-linecap="round" stroke-miterlimit="10" 
 	                points="70,35 45,65 30,52  "/>
-			<polyline class="check-fail" :class="{'check-complete': complete, 'success': success}" fill="none" stroke="#7DB0D5" stroke-width="8" stroke-linecap="round" stroke-miterlimit="10" 
+			<polyline class="check" :class="{'check-complete': complete, 'fail': success}" fill="none" stroke="#7DB0D5" stroke-width="8" stroke-linecap="round" stroke-miterlimit="10" 
 	                points="32,32 68,68"/>
-			<polyline class="check-fail" :class="{'check-complete': complete, 'success': success}" fill="none" stroke="#7DB0D5" stroke-width="8" stroke-linecap="round" stroke-miterlimit="10" 
+			<polyline class="check" :class="{'check-complete': complete, 'fail': success}" fill="none" stroke="#7DB0D5" stroke-width="8" stroke-linecap="round" stroke-miterlimit="10" 
 	                points="68,32 32,68"/>
 	        </g>
 	    </svg>
@@ -47,7 +48,10 @@ Vue.component('task-status', {
   watch: {
     complete: function (newStatus, oldSatus) {
       	setTimeout(function () {
-	        this.success = true;
+		if(this.index != 3)
+	      this.success = true;
+		else
+				this.fail = true;
 	    }.bind(this), 1000);
 	    setTimeout(this.next_task, 3000);
     }
