--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@ Vue.component('task-status', {
 	        <g transform="">
 		        <circle class="path" :class="{'path-complete': success, 'fail':fail}" fill="none" stroke="#7DB0D5" stroke-width="8" stroke-miterlimit="10" cx="50" cy="50" r="44"/>
 	            <circle class="fill" :class="{'fill-complete': complete, 'success': success, 'fail':fail}" fill="none" stroke="#7DB0D5" stroke-width="8" stroke-miterlimit="10" cx="50" cy="50" r="44"/>
-		        <polyline class="check" :class="{'check-complete': index != 3 && complete,'success': success}" fill="none" stroke="#7DB0D5" stroke-width="8" stroke-linecap="round" stroke-miterlimit="10" 
+		        <polyline class="check" :class="{'check-complete': !fail && complete,'success': success}" fill="none" stroke="#7DB0D5" stroke-width="8" stroke-linecap="round" stroke-miterlimit="10" 
 	                points="70,35 45,65 30,52  "/>
-			<polyline class="check" :class="{'check-complete': complete, 'fail': success}" fill="none" stroke="#7DB0D5" stroke-width="8" stroke-linecap="round" stroke-miterlimit="10" 
+			<polyline class="check" :class="{'check-complete': fail, 'fail': fail}" fill="none" stroke="#7DB0D5" stroke-width="8" stroke-linecap="round" stroke-miterlimit="10" 
 	                points="32,32 68,68"/>
-			<polyline class="check" :class="{'check-complete': complete, 'fail': success}" fill="none" stroke="#7DB0D5" stroke-width="8" stroke-linecap="round" stroke-miterlimit="10" 
+			<polyline class="check" :class="{'check-complete': fail, 'fail': fail}" fill="none" stroke="#7DB0D5" stroke-width="8" stroke-linecap="round" stroke-miterlimit="10" 
 	                points="68,32 32,68"/>
 	        </g>
 	    </svg>
