--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Vue.component('task-status', {
 	    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" x="0px" y="0px"
 	        viewBox="0, 0, 100, 100" id="checkmark">
 	        <g transform="">
-		        <circle class="path" :class="{'path-complete': success, 'fail':fail}" fill="none" stroke="#7DB0D5" stroke-width="8" stroke-miterlimit="10" cx="50" cy="50" r="44"/>
+		        <circle class="path" :class="{'path-complete': success || fail, 'fail':fail}" fill="none" stroke="#7DB0D5" stroke-width="8" stroke-miterlimit="10" cx="50" cy="50" r="44"/>
 	            <circle class="fill" :class="{'fill-complete': complete, 'success': success, 'fail':fail}" fill="none" stroke="#7DB0D5" stroke-width="8" stroke-miterlimit="10" cx="50" cy="50" r="44"/>
 		        <polyline class="check" :class="{'check-complete': !fail && complete,'success': success}" fill="none" stroke="#7DB0D5" stroke-width="8" stroke-linecap="round" stroke-miterlimit="10" 
 	                points="70,35 45,65 30,52  "/>
