--- a/index.html
+++ b/index.html
@@ -32,26 +32,24 @@ Vue.component('task-status', {
 	    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" x="0px" y="0px"
 	        viewBox="0, 0, 100, 100" id="checkmark">
 	        <g transform="">
-		        <circle class="path" :class="{'path-complete': (success || fail), 'fail':fail}" fill="none" stroke="#7DB0D5" stroke-width="8" stroke-miterlimit="10" cx="50" cy="50" r="44"/>
+		        <circle class="path" :class="{'path-complete': (success || fail)}" fill="none" stroke="#7DB0D5" stroke-width="8" stroke-miterlimit="10" cx="50" cy="50" r="44"/>
 	            <circle class="fill" :class="{'fill-complete': complete, 'success': success, 'fail':fail}" fill="none" stroke="#7DB0D5" stroke-width="8" stroke-miterlimit="10" cx="50" cy="50" r="44"/>
-		        <polyline class="check" :class="{'check-complete': (success && complete),'success': success}" fill="none" stroke="#7DB0D5" stroke-width="8" stroke-linecap="round" stroke-miterlimit="10" 
+		        <polyline class="check" :class="{'check-complete': complete,'success': success}" fill="none" stroke="#7DB0D5" stroke-width="8" stroke-linecap="round" stroke-miterlimit="10" 
 	                points="70,35 45,65 30,52  "/>
-			<polyline class="check" :class="{'check-complete': fail, 'fail': fail}" fill="none" stroke="#7DB0D5" stroke-width="8" stroke-linecap="round" stroke-miterlimit="10" 
+			<polyline class="check" :class="{'check-complete': completedFail, 'fail': fail}" fill="none" stroke="#7DB0D5" stroke-width="8" stroke-linecap="round" stroke-miterlimit="10" 
 	                points="32,32 68,68"/>
-			<polyline class="check" :class="{'check-complete': fail, 'fail': fail}" fill="none" stroke="#7DB0D5" stroke-width="8" stroke-linecap="round" stroke-miterlimit="10" 
+			<polyline class="check" :class="{'check-complete': completedFail, 'fail': fail}" fill="none" stroke="#7DB0D5" stroke-width="8" stroke-linecap="round" stroke-miterlimit="10" 
 	                points="68,32 32,68"/>
 	        </g>
 	    </svg>
 	</div>
-	<span>{{ name }} {{complete?' completed':''}} {{success?' successfully!':''}}</span>
+	<span>{{ name }} {{(complete||complatedFail)?' completed':''}} {{success?' successfully!':''}} {{fail?' failure!':''}}</span>
 </div>`,
   watch: {
     complete: function (newStatus, oldSatus) {
       	setTimeout(function () {
-		if(this.index != 3)
-	      this.success = true;
-		else
-				this.fail = true;
+	      this.success = this.complete;
+	      this.fail = this.completedFail;
 	    }.bind(this), 1000);
 	    setTimeout(this.next_task, 3000);
     }
@@ -59,7 +57,10 @@ Vue.component('task-status', {
   methods:{
     next_task: function(){
       if(app.tasks.length > this.index){
-    	app.tasks[this.index].complete = true;
+		  if (this.index < 3)
+    		app.tasks[this.index].complete = true;
+		  else
+			  app.tasks[this.index].completedFail = true;
       }
     }
   }
