--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	</div>
 <script type="text/javascript">
 Vue.component('task-status', {
-  props: ['name', 'complete', 'index'],
+  props: ['name', 'complete', 'index', 'completedFail'],
   data: function () {
     return {
       	success: false,
