--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Vue.component('task-status', {
 	        viewBox="0, 0, 100, 100" id="checkmark">
 	        <g transform="">
 		        <circle class="path" :class="{'path-complete': (success || fail)}" fill="none" stroke="#7DB0D5" stroke-width="8" stroke-miterlimit="10" cx="50" cy="50" r="44"/>
-	            <circle class="fill" :class="{'fill-complete': complete, 'success': success, 'fail':fail}" fill="none" stroke="#7DB0D5" stroke-width="8" stroke-miterlimit="10" cx="50" cy="50" r="44"/>
+	            <circle class="fill" :class="{'fill-complete': (complete || completedfail), 'success': success, 'fail':fail}" fill="none" stroke="#7DB0D5" stroke-width="8" stroke-miterlimit="10" cx="50" cy="50" r="44"/>
 		        <polyline class="check" :class="{'check-complete': complete,'success': success}" fill="none" stroke="#7DB0D5" stroke-width="8" stroke-linecap="round" stroke-miterlimit="10" 
 	                points="70,35 45,65 30,52  "/>
 			<polyline class="check" :class="{'check-complete': completedfail, 'fail': fail}" fill="none" stroke="#7DB0D5" stroke-width="8" stroke-linecap="round" stroke-miterlimit="10" 
