--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@ Vue.component('task-status', {
     complete: function (newStatus, oldSatus) {
 		this.on_completed()
     },
-	complatedfail: function (newStatus, oldSatus) {
-		this.on_completed()
-    }
+	completedfail: this.on_completed
   },
   methods:{
 	on_completed: function(){
